--- a/src/settingsdialog.ui
+++ b/src/settingsdialog.ui
@@ -97,6 +97,13 @@
      </property>
     </widget>
    </item>
+   <item row="7" column="0">
+    <widget class="QCheckBox" name="startAtLoginCheckbox">
+     <property name="text">
+      <string>PAC mode</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
